# GlobalTags-Server

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt
src/: cfg.py  loggingHandler.py  main.py  server.py  util.py
src/client/: __init__.py  client.py  gui.py  styles.py
src/client/widgets/: CustomTitleBar.py  ImageButton.py  ServerStatItem.py
